[Chromium] Fix byte ordering bugs reading back WebGL canvases' content on Android https://bugs.webkit.org/show_bug.cgi?id=111661

Reviewed by James Robinson.

Source/Platform:

* chromium/public/WebGraphicsContext3D.h:
(WebGraphicsContext3D):
    Better documented contract of readBackFrameBuffer.

Source/WebCore:

No new tests; covered by existing tests. Ran WebGL conformance
tests on Android and desktop Linux to verify fix.

* platform/chromium/support/GraphicsContext3DChromium.cpp:
(WebCore::GraphicsContext3D::paintRenderingResultsToImageData):
    Avoid incorrect byte swap on Android and other OSs which don't
    swizzle R and B channels.


Canonical link: https://commits.webkit.org/130032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145027 268f45cc-cd09-0410-ab3c-d52691b4dbfc