Source/Platform/chromium/public/WebGraphicsContext3D.h
@@ -185,7 +185,8 @@ public:
     // Helper for software compositing path. Reads back the frame buffer into
     // the memory region pointed to by "pixels" with size "bufferSize". It is
     // expected that the storage for "pixels" covers (4 * width * height) bytes.
-    // Returns true on success.
+    // The RGBA channels are packed into "pixels" using SkBitmap's byte
+    // ordering. Returns true on success.
     virtual bool readBackFramebuffer(unsigned char* pixels, size_t bufferSize, WebGLId framebuffer, int width, int height) = 0;
 
     // Returns the id of the texture which is used for storing the contents of
